force-app/main/default/objects/Corrective_Action_Plan__c/Corrective_Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Corrective Action Plan</label>
    <nameField>
        <displayFormat>CAP-{0000000}</displayFormat>
        <label>Corrective Action Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrective Action Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>