force-app/main/default/objects/Corrective_Action_Plan__c/fields/Audit_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_ID__c</fullName>
    <label>Audit ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>