force-app/main/default/objects/Corrective_Action_Plan__c/fields/AuditorFindings__c.field-meta.xml
<CustomField>
    <fullName>AuditorFindings__c</fullName>
    <description>This field will also work as Supporting information</description>
    <label>Auditor Findings</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>