force-app/main/default/objects/Corrective_Action_Plan__c/fields/CAPEndDate__c.field-meta.xml
<CustomField>
    <fullName>CAPEndDate__c</fullName>
    <label>CAP End Date</label>
    <type>Date</type>
</CustomField>