force-app/main/default/objects/Corrective_Action_Plan__c/fields/CAPEvidenceDue__c.field-meta.xml
<CustomField>
    <fullName>CAPEvidenceDue__c</fullName>
    <label>CAP Evidence Due</label>
    <type>Date</type>
</CustomField>