force-app/main/default/objects/Corrective_Action_Plan__c/fields/CAPStartDate__c.field-meta.xml
<CustomField>
    <fullName>CAPStartDate__c</fullName>
    <label>CAP Start Date</label>
    <type>Date</type>
</CustomField>