force-app/main/default/objects/Corrective_Action_Plan__c/fields/CAPStatus__c.field-meta.xml
<CustomField>
    <fullName>CAPStatus__c</fullName>
    <description>This field will also work NC Status</description>
    <label>CAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
            <value>
                <fullName>New Information Requested</fullName>
            </value>
            <value>
                <fullName>Closed on Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>