force-app/main/default/objects/Corrective_Action_Plan__c/fields/CorrectiveandPreventiveactions__c.field-meta.xml
<CustomField>
    <fullName>CorrectiveandPreventiveactions__c</fullName>
    <description>This field will also work as Corrective Action Plan</description>
    <label>Corrective and Preventive actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>