force-app/main/default/objects/Corrective_Action_Plan__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corrective Action Plans</relationshipLabel>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>