force-app/main/default/objects/Corrective_Action_Plan__c/fields/CustomerContact__c.field-meta.xml
<CustomField>
    <fullName>CustomerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer contact who is responsible for implementing/ resolving NCs</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Corrective Action Plans</relationshipLabel>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>