force-app/main/default/objects/Corrective_Action_Plan__c/fields/DateNCsRaised__c.field-meta.xml
<CustomField>
    <fullName>DateNCsRaised__c</fullName>
    <label>Date NCs Raised</label>
    <type>Date</type>
</CustomField>