force-app/main/default/objects/Corrective_Action_Plan__c/fields/DateNCsResponseRequired__c.field-meta.xml
<CustomField>
    <fullName>DateNCsResponseRequired__c</fullName>
    <label>Date NCs Response Required</label>
    <type>Date</type>
</CustomField>