force-app/main/default/objects/Corrective_Action_Plan__c/fields/DateSCSSentNIRtoClient__c.field-meta.xml
<CustomField>
    <fullName>DateSCSSentNIRtoClient__c</fullName>
    <label>Date SCS Sent NIR to Client</label>
    <type>Date</type>
</CustomField>