force-app/main/default/objects/Corrective_Action_Plan__c/fields/DeadlinetoSubmitCAPResponse__c.field-meta.xml
<CustomField>
    <fullName>DeadlinetoSubmitCAPResponse__c</fullName>
    <label>Deadline to Submit CAP Response</label>
    <type>Date</type>
</CustomField>