force-app/main/default/objects/Corrective_Action_Plan__c/fields/DeadlinetoSubmitNIRResponse__c.field-meta.xml
<CustomField>
    <fullName>DeadlinetoSubmitNIRResponse__c</fullName>
    <label>Deadline to Submit NIR Response</label>
    <type>Date</type>
</CustomField>