force-app/main/default/objects/Corrective_Action_Plan__c/fields/Farm_Size__c.field-meta.xml
<CustomField>
    <fullName>Farm_Size__c</fullName>
    <label>Farm Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>