force-app/main/default/objects/Corrective_Action_Plan__c/fields/NCRiskLevel__c.field-meta.xml
<CustomField>
    <fullName>NCRiskLevel__c</fullName>
    <label>NC Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>OFI</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Rebuttal</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>