force-app/main/default/objects/Corrective_Action_Plan__c/fields/Objective_Evidence_List__c.field-meta.xml
<CustomField>
    <fullName>Objective_Evidence_List__c</fullName>
    <label>Objective Evidence List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>