force-app/main/default/objects/Corrective_Action_Plan__c/fields/ProgramID__c.field-meta.xml
<CustomField>
    <fullName>ProgramID__c</fullName>
    <formula>Program__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program ID</label>
    <type>Text</type>
</CustomField>