force-app/main/default/objects/Corrective_Action_Plan__c/fields/ProjectTask__c.field-meta.xml
<CustomField>
    <fullName>ProjectTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>inspire1__Project_Tasks__c.inspire1__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Corrective Action Plans</relationshipLabel>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>