force-app/main/default/objects/Corrective_Action_Plan__c/fields/RequirementNo__c.field-meta.xml
<CustomField>
    <fullName>RequirementNo__c</fullName>
    <label>Requirement No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>