force-app/main/default/objects/Corrective_Action_Plan__c/fields/Responsible_for_Completion__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Completion__c</fullName>
    <label>Responsible for Completion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>