force-app/main/default/objects/Corrective_Action_Plan__c/fields/RootCause__c.field-meta.xml
<CustomField>
    <fullName>RootCause__c</fullName>
    <description>This field works as evidence field.</description>
    <label>Root Cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>