force-app/main/default/objects/Corrective_Action_Plan__c/fields/SCSresponsetocompanysCAP__c.field-meta.xml
<CustomField>
    <fullName>SCSresponsetocompanysCAP__c</fullName>
    <description>This field will also work as Certification Body Response</description>
    <label>SCS response to company’s CAP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>