force-app/main/default/objects/Corrective_Action_Plan__c/fields/TechReviewer__c.field-meta.xml
<CustomField>
    <fullName>TechReviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Corrective_Action_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>