force-app/main/default/objects/Corrective_Action_Plan__c/fields/Willful_Violation__c.field-meta.xml
<CustomField>
    <fullName>Willful_Violation__c</fullName>
    <label>Willful Violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>